--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,9 @@ ML_MODEL_URL=http://localhost:5000/predict
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 ENVIRONMENT=development
 TELEGRAM_TOKEN=your-telegram-bot-token
+
+# Blockchain settings
+ETH_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your-api-key
+SCAM_REPORT_CONTRACT=0x0000000000000000000000000000000000000000
+REPORTER_PRIVATE_KEY=your-private-key-here
+CHAIN_ID=11155111
