--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
@@ -45,6 +46,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "ethers": "^6.14.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -74,7 +76,8 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
-    "postcss": "^8.4.47",    "sharp": "^0.34.2",
+    "postcss": "^8.4.47",
+    "sharp": "^0.34.2",
     "svg2ico": "^1.0.35",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
