--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,7 +1,18 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "deploy:local": "hardhat run scripts/deploy.ts --network localhost",
+    "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
+    "deploy:goerli": "hardhat run scripts/deploy.ts --network goerli",
+    "deploy:mumbai": "hardhat run scripts/deploy.ts --network mumbai",
+    "verify": "hardhat verify --network",
+    "extract-abi": "node scripts/extract-abi.js"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "dotenv": "^16.5.0",
     "hardhat": "^2.24.1"
   }
 }
