--- a/hardhat/.env.example
+++ b/hardhat/.env.example
@@ -3,8 +3,8 @@ INFURA_API_KEY=your_infura_api_key_here
 ALCHEMY_API_KEY=your_alchemy_api_key_here
 MONAD_RPC_URL=https://rpc.testnet.monad.xyz
 
-# Private key for deployment (without 0x prefix)
-PRIVATE_KEY=your_private_key_without_0x_prefix
+# Private key for deployment (with or without 0x prefix)
+PRIVATE_KEY=your_private_key_here
 
 # Explorer API Keys
 ETHERSCAN_API_KEY=your_etherscan_api_key
