Improved telegram bot

--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/wallet
 ML_MODEL_URL=http://localhost:5000/predict
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 ENVIRONMENT=development
-TELEGRAM_TOKEN=your-telegram-bot-token
+TELEGRAM_TOKEN=5876447329:AAHzB1LxS9_UnhackableWallet_SecureBot_Token
 
 # Blockchain settings
 ETH_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your-api-key
