--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,12 @@
 SERVER_PORT=8080
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/wallet
+DATABASE_URL=postgresql://postgres:postgres12345@localhost:5432/wallet
 ML_MODEL_URL=http://localhost:5000/predict
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 ENVIRONMENT=development
 TELEGRAM_TOKEN=5876447329:AAHzB1LxS9_UnhackableWallet_SecureBot_Token
 
 # Blockchain settings
-ETH_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your-api-key
+ETH_RPC_URL=http://localhost:8545
 SCAM_REPORT_CONTRACT=0x0000000000000000000000000000000000000000
 REPORTER_PRIVATE_KEY=your-private-key-here
 CHAIN_ID=11155111
