--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 SERVER_PORT=8080
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/wallet
+DATABASE_URL=postgresql://postgres:postgres12345@localhost:5432/wallet
 ML_MODEL_URL=http://localhost:5000/predict
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 ENVIRONMENT=development
