Fix external ML API integration in backend Fix integration with the external fraud detection ML API by properly formatting the request payload. Updated the AIService in the backend to correctly send transaction data to the external ML API with the required 18 features array and account holder field. Removed unused imports and improved risk score mapping based on the API's prediction responses.

--- a/vercel.json
+++ b/vercel.json
@@ -20,10 +20,9 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ],
-  "env": {
+  ],  "env": {
     "DATABASE_URL": "@database_url",
-    "ML_MODEL_URL": "@ml_model_url",
+    "ML_MODEL_URL": "https://fraud-transaction-detection-uaxt.onrender.com/predict",
     "JWT_SECRET": "@jwt_secret",
     "ENVIRONMENT": "production"
   }
