--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -23,6 +23,7 @@ jobs:
           python-version: '3.10'
 
       - run: |
+          cd backend/AIML/
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
