--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
 SERVER_PORT=8080
-DATABASE_URL=postgresql://Records_owner:npg_bP8z5VCwaJTr@ep-odd-shape-a4yij4cq-pooler.us-east-1.aws.neon.tech/Records?sslmode=require
-ML_MODEL_URL=http://localhost:5000/predict
+DATABASE_URL=postgresql://Records_owner:npg_fELAr2DGw3TZ@ep-odd-shape-a4yij4cq-pooler.us-east-1.aws.neon.tech/Records?sslmode=require
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 ENVIRONMENT=development
 TELEGRAM_TOKEN=5876447329:AAHzB1LxS9_UnhackableWallet_SecureBot_Token
