--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "civic:setup": "node scripts/setup-civic-auth.js"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.87.6",
+    "@civic/auth": "^0.8.0",
+    "@civic/auth-web3": "^0.6.0",
+    "@civic/solana-gateway-react": "^1.2.4",
+    "@civic/solana-gateway-ts": "^0.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -42,7 +45,14 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.56.2",
+    "@web3auth/base": "^9.7.0",
+    "@web3auth/core": "^4.6.0",
+    "@web3auth/openlogin-adapter": "^8.12.4",
+    "@web3auth/web3auth-wagmi-connector": "^7.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
