--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,30 @@
+# Server Configuration
 SERVER_PORT=8080
-DATABASE_URL=postgresql://Records_owner:npg_fELAr2DGw3TZ@ep-odd-shape-a4yij4cq-pooler.us-east-1.aws.neon.tech/Records?sslmode=require
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-ENVIRONMENT=development
-TELEGRAM_TOKEN=5876447329:AAHzB1LxS9_UnhackableWallet_SecureBot_Token
+ENVIRONMENT=production
 
-# Blockchain settings
-ETH_RPC_URL=http://localhost:8545
-SCAM_REPORT_CONTRACT=0x0000000000000000000000000000000000000000
-REPORTER_PRIVATE_KEY=your-private-key-here
-CHAIN_ID=11155111
+# Database Configuration
+DATABASE_URL=postgresql://Records_owner:npg_fELAr2DGw3TZ@ep-odd-shape-a4yij4cq-pooler.us-east-1.aws.neon.tech/Records?sslmode=require
+
+# Authentication
+JWT_SECRET=qm/0i0Tezdt+4C2aFyc3AVYXjngUjEcbelazf8D/ofs=
+
+# Civic Auth Configuration
+CIVIC_AUTH_KEY=057cbd22-6176-4d8b-bdfa-e4b71d4da932
+CIVIC_GATEKEEPER_NETWORK=ignREusXmGrscGNUesoU9mxfds9AiYTezUKex8Aw5Haq
+CIVIC_AUTH_BASE_URL=https://auth.civic.com
+CIVIC_AUTH_CHAIN_ID=1  # Ethereum Mainnet
+CIVIC_GATEWAY_TOKEN=your_gateway_token_here  # Get from Civic Dashboard
+CIVIC_COLLECTION_FLOW=your_collection_flow_id_here  # Get from Civic Dashboard
+CIVIC_STAGE=prod  # or 'preprod' for testing
+
+# Blockchain Configuration
+ETH_RPC_URL=https://sepolia.infura.io/v3/your-project-id
+CHAIN_ID=11155111  # Sepolia testnet
+SCAM_REPORT_CONTRACT=your_deployed_contract_address
+REPORTER_PRIVATE_KEY=your_secure_private_key
+
+
+
+# Additional Security Settings
+NODE_ENV=production
+SSL_ENABLED=true
