--- a/backend/.env
+++ b/backend/.env
@@ -9,13 +9,18 @@ DATABASE_URL=postgresql://Records_owner:npg_fELAr2DGw3TZ@ep-odd-shape-a4yij4cq-p
 JWT_SECRET=qm/0i0Tezdt+4C2aFyc3AVYXjngUjEcbelazf8D/ofs=
 
 # Civic Auth Configuration
-CIVIC_AUTH_KEY=057cbd22-6176-4d8b-bdfa-e4b71d4da932
+CIVIC_AUTH_KEY=YOUR_CIVIC_API_KEY  # Get from https://dev.civic.com
 CIVIC_GATEKEEPER_NETWORK=ignREusXmGrscGNUesoU9mxfds9AiYTezUKex8Aw5Haq
-CIVIC_AUTH_BASE_URL=https://auth.civic.com
-CIVIC_AUTH_CHAIN_ID=1  # Ethereum Mainnet
-CIVIC_GATEWAY_TOKEN=your_gateway_token_here  # Get from Civic Dashboard
-CIVIC_COLLECTION_FLOW=your_collection_flow_id_here  # Get from Civic Dashboard
-CIVIC_STAGE=prod  # or 'preprod' for testing
+CIVIC_AUTH_CHAIN_ID=1  # Ethereum Mainnet, use 137 for Polygon
+CIVIC_STAGE=prod  # Use 'preprod' for testing
+
+# Civic Gateway Configuration
+CIVIC_GATEWAY_TOKEN=YOUR_GATEWAY_TOKEN  # Get from https://dev.civic.com dashboard
+CIVIC_GATEWAY_SECRET=YOUR_GATEWAY_SECRET  # Get from https://dev.civic.com dashboard
+CIVIC_GATEWAY_APP_ID=YOUR_APP_ID  # Get from https://dev.civic.com dashboard
+
+# Civic Identity Configuration
+CIVIC_IDENTITY_APP_ID=YOUR_IDENTITY_APP_ID  # Get from https://dev.civic.com dashboard under Identity Verification
 
 # Blockchain Configuration
 ETH_RPC_URL=https://sepolia.infura.io/v3/your-project-id
